--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,14 @@
         <div class="col-md-12">
             <div class="card mt-4">
                 <div class="card-body">
-                    <h4 class="card-title">Pedidos (<%=pedidos.length%>)</h4>
+                    <div class="row">
+                        <div class="col">
+                            <h4 class="card-title">Pedidos (<%= pedidos.length %>)</h4>
+                        </div>
+                        <div class="col d-flex justify-content-end">
+                            <a href="/lista" class="btn btn-outline-success">Ver Pedidos</a>
+                        </div>
+                    </div>
                     <form action="/add" method="POST">
                         <div class="form-group">
                             <div class="row ml-1">
@@ -25,14 +32,11 @@
                             <label for="punto_retiro">Punto de Retiro</label>
                             <select name="punto_retiro" id="punto_retiro" class="form-control mb-4">
                                 <option value="" disabled selected>Elegí un punto de retiro</option>
-                                <option value="D1">D1 - Distrito Sur</option>
-                                <option value="D2">D2 - Distrito Sudoeste</option>
-                                <option value="D3">D3 - Distrito Oeste</option>
-                                <option value="D4">D4 - Distrito Noroeste</option>
-                                <option value="D5">D5 - Distrito Norte</option>
-                                <option value="D6">D6 - Distrito Centro</option>
+                                <% for(var i=0; lugares.length > i; i ++) { %>
+                                    <option value="<%= lugares[i].nombre %> "><%= lugares[i].nombre + ' ' + lugares[i].direccion%></option>
+                                <% } %>
                             </select>
-                            <button type="submit" class="btn btn-success btn-block">Enviar</button>
+                            <button type="submit" class="btn btn-outline-success btn-block">Enviar</button>
                         </div>
                     </form>
                 </div>
