--- a/src/views/pedido.ejs
+++ b/src/views/pedido.ejs
@@ -1,6 +1,8 @@
 <%- include('partials/_header') %>
 
-<div class="container">
+<div class="container mt-4">
+    <a href="/lista">Volver</a>
+    <h1 class="display mt-4">Pedido</h1>
     <form action="/edit/<%= pedido.id %> " method="POST">
         <div class="form-group">
     
@@ -20,16 +22,21 @@
             <label for="punto_retiro">Punto de Retiro</label>
             <select name="punto_retiro" id="punto_retiro" class="form-control mb-4">
                 <option value="" disabled selected>Elegí un punto de retiro</option>
-                <option value="D1">D1 - Distrito Sur</option>
-                <option value="D2">D2 - Distrito Sudoeste</option>
-                <option value="D3">D3 - Distrito Oeste</option>
-                <option value="D4">D4 - Distrito Noroeste</option>
-                <option value="D5">D5 - Distrito Norte</option>
-                <option value="D6">D6 - Distrito Centro</option>
+                <% for(var i=0; lugares.length > i; i ++) { %>
+                    <option value="<%= lugares[i].nombre %>"<%= (pedido.punto_retiro === lugares[i].nombre) ? 'selected' : ''  %> >
+                        <%= lugares[i].nombre + ' ' + lugares[i].direccion%>
+                    </option>
+                <% } %>
             </select>
-            <button type="submit" class="btn btn-success btn-block">Editar</button>
+            <div class="row">
+                <div class="col">
+                    <a href="/pedido/delete/<%= pedido.id %> " class="btn btn-outline-danger btn-block">Eliminar</a>
+                </div>
+                <div class="col">
+                    <button type="submit" class="btn btn-outline-primary btn-block">Guardar</button>
+                </div>
+            </div>
         </div>
     </form>
 </div>
-
 <%- include('partials/_footer') %>
