--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,7 +15,7 @@
                             <a href="/lista" class="btn btn-outline-success">Ver Pedidos</a>
                         </div>
                     </div>
-                    <form action="/add" method="POST">
+                    <form action="/add" method="POST" autocomplete="off">
                         <div class="form-group">
                             <div class="row ml-1">
                                 <label for="enteras">Enteras </label>
