--- a/src/views/pedido.ejs
+++ b/src/views/pedido.ejs
@@ -3,7 +3,7 @@
 <div class="container mt-4">
     <a href="/lista">Volver</a>
     <h1 class="display mt-4">Pedido</h1>
-    <form action="/edit/<%= pedido.id %> " method="POST">
+    <form action="/edit/<%= pedido.id %> " method="POST" autocomplete="off">
         <div class="form-group">
     
             <div class="row ml-1">
