--- a/src/views/lugar.ejs
+++ b/src/views/lugar.ejs
@@ -5,11 +5,7 @@
         <div class="col-md-4">
             <div class="card mb-3">
                 <div class="card-body">
-                    <% if (lugar) { %>
-                        <form action="/lugar/guardar/<%= lugar.id %> " method="POST">
-                    <% }else{ %>
-                        <form action="/lugar" method="POST">
-                       <% } %> 
+                    <form action="/lugar<%= lugar ? '/guardar/' + lugar.id : ''%>" method="POST" autocomplete="off">
                         <div class="form-group">
                             <label for="nombre">Nombre</label>
                             <input type="text" name="nombre" id="nombre" class="form-control mb-1" value="<%= lugar ? lugar.nombre : '' %> ">
