--- a/src/views/lista.ejs
+++ b/src/views/lista.ejs
@@ -19,7 +19,7 @@
                         <td scope="col"><%= lista[i].enteras%></td>
                         <td scope="col"><%= lista[i].descremadas%></td>
                         <td scope="col"><%= lista[i].celular%></td>
-                        <td scope="col"><%= lista[i].punto_retiro%></td>
+                        <td scope="col"><%= lista[i].lugar.nombre%></td>
                     </tr>
                     <%}%>
             </tbody>
