--- a/src/views/pedido.ejs
+++ b/src/views/pedido.ejs
@@ -19,24 +19,36 @@
             <label for="celu">Celular</label>
             <input type="number" name="celular" id="celular" class="form-control mb-2" value=<%= pedido.celular %>>
     
-            <label for="punto_retiro">Punto de Retiro</label>
-            <select name="punto_retiro" id="punto_retiro" class="form-control mb-4">
+            <label for="lugar">Punto de Retiro</label>
+            <select name="lugar.id" id="lugar" class="form-control mb-4">
                 <option value="" disabled selected>Elegí un punto de retiro</option>
                 <% for(var i=0; lugares.length > i; i ++) { %>
-                    <option value="<%= lugares[i].nombre %>"<%= (pedido.punto_retiro === lugares[i].nombre) ? 'selected' : ''  %> >
+                    <option value="<%= lugares[i].id %>"<%= (pedido.lugar.id === lugares[i].id) ? 'selected' : ''  %> data-nombre='<%= lugares[i].nombre %>' id="<%= lugares[i].id %>" >
                         <%= lugares[i].nombre + ' ' + lugares[i].direccion%>
                     </option>
                 <% } %>
             </select>
+            <input type="text" name="lugar.nombre" value="" id="lugarNombre" value="" class="d-none">
+
             <div class="row">
                 <div class="col">
-                    <a href="/pedido/delete/<%= pedido.id %> " class="btn btn-outline-danger btn-block">Eliminar</a>
+                    <a href="/pedido/delete/<%= pedido.id %>" class="btn btn-outline-danger btn-block">Eliminar</a>
                 </div>
                 <div class="col">
-                    <button type="submit" class="btn btn-outline-primary btn-block">Guardar</button>
+                    <button type="submit" class="btn btn-outline-primary btn-block" id="guardar">Guardar</button>
                 </div>
             </div>
         </div>
     </form>
 </div>
+<script>
+    $(document).ready(function(){
+        var data = $('select option:selected').data();
+        $("#lugarNombre").val(data.nombre);
+    })
+    $('#lugar').change(function(){
+        var data = $('select option:selected').data();
+        $("#lugarNombre").val(data.nombre);
+})
+</script>
 <%- include('partials/_footer') %>
