vista de listas responsiva

--- a/src/views/lista.ejs
+++ b/src/views/lista.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/_header') %>
 <div class="container">
     <h1 class="display mt-4">Pedidos</h1>
-    <div class="table-responsive">
+    <div class="table-responsive d-none d-sm-block">
         <table class="table table-hover table-bordered mt-4">
             <thead class="thead-dark">
                 <tr>
@@ -26,6 +26,32 @@
         </table>
     </div>
     <a href="/" class="btn btn-outline-success btn-block">Registrar Pedidos</a>
+    <div class="card-group d-block d-sm-none mt-4">
+        <% for(var i = 0;i < lista.length; i++) {%>
+            <div class="card fila" id="<%= lista[i].id %>">
+                <div class="card-body">
+                    <h4 class="card-title">Pedido Nro <%= i + 1 %></h4>
+                    <div class="row mb-2">
+                        <div class="col">
+                            <h5 class="card-text text-primary">Enteras: <%= lista[i].enteras %></h5>
+                        </div>
+                        <div class="col">
+                            <h5 class="card-text text-success">Descremadas: <%= lista[i].descremadas %></h5>
+                        </div>
+                    </div>
+                    <p class="card-text">Punto Retiro: <%= lista[i].lugar.nombre %></p>
+                    <div class="row">
+                        <div class="col">
+                            <p class="card-text">Celular: <%= lista[i].celular %></p>
+                        </div>
+                        <div class="col">
+                            <a href="http://wa.me/549<%= lista[i].celular %>" class="btn btn-sm btn-block btn-outline-success">Enviar WP</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <%}%>
+    </div>
 </div>
 <script>
     $('.fila').click(function() {
