--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -21,10 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                    <a class="nav-link" href="/">Pedidos</a>
+                    <a class="nav-link" href="/pedido">Pedidos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/lugar">Lugares</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/producto">Productos</a>
                     </li>
                 </ul>
             </div>
